Add Netlify configuration for deployment, including build settings, redirects for SPA routing, and security headers. Update package.json with Netlify build scripts and add error handling in omdbApi service for improved API response management.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build:netlify": "npm run build",
+    "postbuild": "echo 'Build completed successfully for Netlify deployment'"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
